--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+
 services:
 
   alerts_backend:
@@ -9,6 +10,8 @@ services:
     volumes:
       - ./alerts_backend:/app
 #    - ./media:/app/media
+    environment:
+      - DJANGO_SETTINGS_MODULE=alerts_backend.settings_local
     ports:
       - '8000:8000'
     depends_on:
@@ -21,6 +24,8 @@ services:
     container_name: alerts_backend_celery
     volumes:
       - ./alerts_backend:/app
+    environment:
+      - DJANGO_SETTINGS_MODULE=alerts_backend.settings_local
     depends_on:
       - smtp_server
       - alerts_backend_redis
@@ -28,6 +33,8 @@ services:
 
   alerts_backend_redis:
     image: redis:7.0.11-alpine
+    ports:
+      - '6379:6379'
     container_name: alerts_backend_redis
 
   alerts_backend_postgres:
@@ -35,12 +42,28 @@ services:
       context: ./alerts_backend
       dockerfile: dockerfiles/postgres.dockerfile
     container_name: alerts_backend_postgres
+    ports:
+      - '5432:5432'
     env_file:
       - ./alerts_backend/env/postgres.env
 
   smtp_server:
-    image: redis:7.0.11-alpine
+    image: "inbucket/inbucket:stable"
     container_name: smtp_server
     ports:
       - '2500:2500'
       - '9000:9000'
+
+  swagger_ui:
+    image: "swaggerapi/swagger-ui"
+    container_name: swagger_ui
+    ports:
+      - '8080:8080'
+    environment:
+      - SWAGGER_JSON=/schema.yml
+    volumes:
+        - ./alerts_backend/schema.yml:/schema.yml
+
+#networks:
+#    default:
+#        name: alerts_backend_network
