--- a/analytics/requirements.txt
+++ b/analytics/requirements.txt
@@ -25,6 +25,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 comm==0.1.3
+cron-descriptor==1.4.0
 dataclasses==0.6
 dataclasses-json==0.5.9
 debugpy==1.6.7
@@ -32,11 +33,13 @@ decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.6
 Django==4.2.2
+django-celery-beat==2.5.0
 django-cors-headers==4.1.0
 django-enumchoicefield==3.0.1
 django-extensions==3.2.3
 django-redis==5.3.0
 django-shell==1.0.2
+django-timezone-field==5.1
 djangorestframework==3.14.0
 drf-spectacular==0.26.3
 ebaysdk==2.2.0
@@ -111,7 +114,9 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.15.1
 pyrsistent==0.19.3
+python-crontab==2.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-json-logger==2.0.7
 python-lsp-jsonrpc==1.0.0
 pytz==2023.3
