--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
 
@@ -8,14 +8,14 @@ services:
       dockerfile: alerts_backend/dockerfiles/server.dockerfile
     container_name: alerts
     volumes:
-      - ./alerts_backend:/app
-      - ./pubsub:/app/pubsub
+    - ./alerts_backend:/app
+    - ./pubsub:/app/pubsub
     environment:
-      - DJANGO_SETTINGS_MODULE=alerts_backend.settings_docker
+    - DJANGO_SETTINGS_MODULE=alerts_backend.settings_docker
     ports:
-      - '8000:8000'
+    - 8000:8000
     depends_on:
-      - alerts_celery
+    - alerts_celery
 
   alerts_celery:
     build:
@@ -23,19 +23,19 @@ services:
       dockerfile: alerts_backend/dockerfiles/celery.dockerfile
     container_name: alerts_celery
     volumes:
-      - ./alerts_backend:/app
-      - ./pubsub:/app/pubsub
+    - ./alerts_backend:/app
+    - ./pubsub:/app/pubsub
     environment:
-      - DJANGO_SETTINGS_MODULE=alerts_backend.settings_docker
+    - DJANGO_SETTINGS_MODULE=alerts_backend.settings_docker
     depends_on:
-      - smtp_server
-      - alerts_redis
-      - alerts_postgres
+#      - smtp_server
+    - alerts_redis
+    - alerts_postgres
 
   alerts_redis:
     image: redis:7.0.11-alpine
     ports:
-      - '6379:6379'
+    - 6379:6379
     container_name: alerts_redis
 
   alerts_postgres:
@@ -44,41 +44,41 @@ services:
       dockerfile: alerts_backend/dockerfiles/postgres.dockerfile
     container_name: alerts_postgres
     ports:
-      - '5432:5432'
+    - 5432:5432
     env_file:
-      - alerts_backend/dockerfiles/env/postgres.env
+    - alerts_backend/dockerfiles/env/postgres.env
 
-  smtp_server:
-    image: "inbucket/inbucket:stable"
-    container_name: smtp_server
-    ports:
+#  smtp_server:
+#    image: "inbucket/inbucket:stable"
+#    container_name: smtp_server
+#    ports:
 #      - '2500:2500'
-      - '9000:9000'
+#      - '9000:9000'
 
   alerts_swagger_ui:
-    image: "swaggerapi/swagger-ui"
+    image: swaggerapi/swagger-ui
     container_name: alerts_swagger_ui
     ports:
-      - '8080:8080'
+    - 8080:8080
     environment:
-      - SWAGGER_JSON=/schema.yml
+    - SWAGGER_JSON=/schema.yml
     volumes:
-        - ./alerts_backend/schema.yml:/schema.yml
+    - ./alerts_backend/schema.yml:/schema.yml
 
-  analytics_backend:
-    build:
-      context: .
-      dockerfile: analytics/dockerfiles/server.dockerfile
-    container_name: analytics_backend
-    volumes:
-      - ./analytics:/app
-      - ./pubsub:/app/pubsub
-    environment:
-      - DJANGO_SETTINGS_MODULE=analytics.settings_docker
-    ports:
-      - '8001:8001'
-    depends_on:
-      - analytics_celery
+#  analytics_backend:
+#    build:
+#      context: .
+#      dockerfile: analytics/dockerfiles/server.dockerfile
+#    container_name: analytics_backend
+#    volumes:
+#      - ./analytics:/app
+#      - ./pubsub:/app/pubsub
+#    environment:
+#      - DJANGO_SETTINGS_MODULE=analytics.settings_docker
+#    ports:
+#      - '8001:8001'
+#    depends_on:
+#      - analytics_celery
 
   analytics_celery:
     build:
@@ -86,19 +86,19 @@ services:
       dockerfile: analytics/dockerfiles/celery.dockerfile
     container_name: analytics_celery
     volumes:
-      - ./analytics:/app
-      - ./pubsub:/app/pubsub
+    - ./analytics:/app
+    - ./pubsub:/app/pubsub
     environment:
-      - DJANGO_SETTINGS_MODULE=analytics.settings_docker
+    - DJANGO_SETTINGS_MODULE=analytics.settings_docker
     depends_on:
-      - smtp_server
-      - analytics_redis
-      - analytics_postgres
+    - smtp_server
+    - analytics_redis
+    - analytics_postgres
 
   analytics_redis:
     image: redis:7.0.11-alpine
     ports:
-      - '6380:6379'
+    - 6380:6379
     container_name: analytics_redis
 
   analytics_postgres:
@@ -107,16 +107,22 @@ services:
       dockerfile: analytics/dockerfiles/postgres.dockerfile
     container_name: analytics_postgres
     ports:
-      - '5433:5432'
+    - 5433:5432
     env_file:
-      - analytics/dockerfiles/env/postgres.env
+    - analytics/dockerfiles/env/postgres.env
 
   analytics_swagger_ui:
-    image: "swaggerapi/swagger-ui"
+    image: swaggerapi/swagger-ui
     container_name: analytics_swagger_ui
     ports:
-      - '8081:8080'
+    - 8081:8080
     environment:
-      - SWAGGER_JSON=/schema.yml
+    - SWAGGER_JSON=/schema.yml
     volumes:
-      - ./analytics/schema.yml:/schema.yml
+    - ./analytics/schema.yml:/schema.yml
+
+  pubsub_redis:
+    image: redis:7.0.11-alpine
+    ports:
+    - 6381:6379
+    container_name: pubsub_redis
