--- a/alerts_frontend/package.json
+++ b/alerts_frontend/package.json
@@ -1,4 +1,8 @@
 {
+  "author": {
+    "name": "Gaurav Arun",
+    "url": "https://github.com/gaurav-arun"
+  },
   "browserslist": {
     "development": [
       "last 1 chrome version",
@@ -12,15 +16,17 @@
     ]
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.4.18"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   },
   "eslintConfig": {
     "extends": [
@@ -28,13 +34,16 @@
       "react-app/jest"
     ]
   },
-  "name": "alerts_frontend",
+  "homepage": "https://github.com/gaurav-arun",
+  "name": "crud-app",
   "private": true,
   "scripts": {
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
-  "version": "0.1.0"
+  "version": "3.3.0"
 }
