--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,3 +98,13 @@ services:
   pubsub_redis:
     image: redis:7.0.11-alpine
     container_name: pubsub_redis
+
+  ebaymock:
+    build:
+      context: .
+      dockerfile: ebay_mock/dockerfiles/server.dockerfile
+    container_name: ebaymock
+    environment:
+    - DJANGO_SETTINGS_MODULE=ebay_mock.settings
+    depends_on:
+    - alerts_celery
