--- a/alerts_frontend/package.json
+++ b/alerts_frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "sweetalert2": "^11.4.18"
   },
