Add consistent naming for ebay mock service

--- a/alerts_backend/.env.docker
+++ b/alerts_backend/.env.docker
@@ -9,7 +9,7 @@ EBAY_CLIENT_SECRET_SANDBOX=""
 EBAY_CLIENT_ID_PRODUCTION=""
 EBAY_CLIENT_SECRET_PRODUCTION=""
 
-EBAY_MOCK_SERVER_URL="http://ebaymock:8002"
+EBAY_MOCK_SERVER_URL="http://ebay-mock:8002"
 
 
 # SMTP Server
