[alerts_backend] Refactor django settings for alerts_backend

--- a/alerts_backend/.env.docker
+++ b/alerts_backend/.env.docker
@@ -1,14 +1,22 @@
+# Runtime
+DEBUG=False
+SECRET_KEY="secret_key"
+ALLOWED_HOSTS="host.docker.internal,localhost"
+CORS_ALLOWED_ORIGINS="http://localhost:8080,http://localhost:3000"
+
+# Spectacurlar
+SPECTACULAR_SERVER_URL="http://localhost:8000"
+
+# Django Rest Framework
+DRF_PAGE_SIZE=5
+
+
 # Ebay API
-
-# [sandbox|production|mock]
 EBAY_API_ENV="production"
-
 EBAY_CLIENT_ID_SANDBOX=""
 EBAY_CLIENT_SECRET_SANDBOX=""
-
 EBAY_CLIENT_ID_PRODUCTION=""
 EBAY_CLIENT_SECRET_PRODUCTION=""
-
 EBAY_MOCK_SERVER_URL="http://ebay-mock:8002"
 
 
