--- a/analytics/.env.docker
+++ b/analytics/.env.docker
@@ -1,3 +1,10 @@
+# Runtime
+DEBUG=False
+SECRET_KEY="secret_key"
+ALLOWED_HOSTS="host.docker.internal,localhost"
+CORS_ALLOWED_ORIGINS="http://localhost:8080,http://localhost:3000"
+
+
 # SMTP Server
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST='sandbox.smtp.mailtrap.io'
