[alerts_backend, analytics] Configure a default queue for celery tasks
Having a default queue for celery tasks enables us to explicitly specify the task queue while starting celery workers. This is useful if multiple celery workers instances need to be started on the same host. For example, I can run celery workers for alerts_backend and analytics using the same redis instance. However, since the default task queue is different, these two instances will not interfere with each other's tasks.

--- a/alerts_backend/.env.docker
+++ b/alerts_backend/.env.docker
@@ -45,6 +45,10 @@ REDIS_HOST="alerts_redis"
 REDIS_PORT=6379
 
 
+# Celery
+CELERY_DEFAULT_QUEUE="alerts_backend"
+
+
 # PubSub
 PUBSUB_HOST="pubsub_redis"
 PUBSUB_PORT=6379
