--- a/analytics/.env.docker
+++ b/analytics/.env.docker
@@ -30,6 +30,10 @@ REDIS_HOST="analytics_redis"
 REDIS_PORT=6379
 
 
+# Celery
+CELERY_DEFAULT_QUEUE="analytics"
+
+
 # PubSub
 PUBSUB_HOST="pubsub_redis"
 PUBSUB_PORT=6379
