--- a/analytics/.env.docker
+++ b/analytics/.env.docker
@@ -32,7 +32,7 @@ REDIS_PORT=6379
 
 # Celery
 CELERY_DEFAULT_QUEUE="analytics"
-
+PRODUCT_INSIGHTS_FREQUENCY_IN_MINUTES=2
 
 # PubSub
 PUBSUB_HOST="pubsub_redis"
